# llvm-lnt

./: .arcconfig  .gitignore  CHANGELOG.txt  Dockerfile  LICENSE.TXT  MANIFEST.in  Procfile  README.md  README.txt  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.client.txt  requirements.server.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: copilot-instructions.md
.github/workflows/: build-and-publish-package.yaml  build-and-publish-package.yml  build-docker.yaml  build.yaml  check-installation.yaml  deploy-lnt.llvm.org.yaml  flake8_docs.yaml  tox.yaml
deployment/: README.md  app_wrapper.py  compose.env.tpl  compose.prod.yaml  ec2-startup.sh  ec2-volume-mapping.yaml  main.tf  on-ec2-boot.sh  on-ec2-setup.sh
docker/: .env  Dockerfile  compose.yaml  dev.env  docker-compose.yml  docker-entrypoint-log.sh  docker-entrypoint.sh  lnt-wait-db  lnt.dockerfile  nginx.conf  wait_db
docker/lnt.llvm.org/: ec2-startup.sh.tpl  main.tf
docs/: Makefile  api.rst  concepts.rst  conf.py  contents.rst  developer_guide.rst  importing_data.rst  intro.rst  my_suite.yaml  profiles.rst  quickstart.rst  regressions-work-items.md  report-example.json  running_server.rst  schema-example.yaml  tests.rst  tools.rst  v5-api-implementation-plan.md  v5-db-implementation-plan.md  v5-implementation-guide.md  v5-perf-todo.md  v5-regression-api-implementation-plan.md  v5-regression-db-implementation-plan.md  v5-regression-ui-implementation-plan.md  v5-submission-guide.md  v5-todo.md  v5-ui-implementation-plan.md
docs/_templates/: index.html  indexsidebar.html
docs/design/: README.md  v5-api.md  v5-db.md  v5-discussion-about-orders.md  v5-regression-workflow-changes.md  v5-ui.md
examples/: functions.py  run_to_csv.py
lnt/: __init__.py
lnt/db/: runinfo.py
lnt/formats/: JSONFormat.py  PlistFormat.py  __init__.py
lnt/lnttool/: __init__.py  abtest.py  admin.py  check_no_errors.py  checkformat.py  common.py  convert.py  create.py  expire_abtests.py  import_data.py  import_report.py  main.py  profile.py  runserver.py  runtest.py  send_daily_report.py  send_run_comparison.py  showtests.py  submit.py  updatedb.py  viewcomparison.py
lnt/server/: __init__.py  config.py  instance.py
lnt/testing/: __init__.py
lnt/tests/: __init__.py  builtintest.py  compile.py  nt.py  test_suite.py
lnt/util/: ImportData.py  NTEmailReport.py  ServerUtil.py  __init__.py  async_ops.py  multidict.py  multitool.py  stats.py  wsgi_restart.py
schemas/: README.md  compile.yaml  nts.yaml
tests/: .coveragerc  __init__.py  lit.cfg
tests/Formats/: json.py  plist.py
tests/SharedInputs/: create_temp_instance.py  mysql_wrapper.sh  postgres_wrapper.sh  sample-report2.json  server_wrapper.sh
tests/docker/: smoke-test.sh
tests/lnttool/: MySQLDB.shtest  PostgresDB.py  PostgresDB.shtest  PostgresDB.test.sh  Profile.py  UpdateDB.py  admin.shtest  check_no_errors.shtest  checkformat.shtest  create.shtest  email_tools.py  import.shtest  importreport.machine-info.shtest  importreport.run-info.shtest  importreport.shtest  showtests.shtest  submit.extra-run-information.shtest  submit.py  submit.shtest  submit_badurl.shtest  test_importreport.py  updatedb.shtest  version.shtest  view-comparison.py  view-comparison.shtest
tests/runtest/: exclude_stat.py  multisample.py  nt-darwin.py  nt.py  only_test.py  rerun.py  test_suite-benchmarking-only.shtest  test_suite-build-dir.shtest  test_suite-c-compiler.shtest  test_suite-cache.shtest  test_suite-cc.shtest  test_suite-cflags0.shtest  test_suite-cflags1.shtest  test_suite-cflags2.shtest  test_suite-cflags3.shtest  test_suite-cflags4.shtest  test_suite-compile-only.shtest  test_suite-cross.shtest  test_suite-drop-exec.shtest  (+17 more)
utils/: README.txt  check-coverage  check-sdist  lint.sh
(+541 files in other folders)
